--- a/visao_am/Aulas/Aula5VC.ipynb
+++ b/visao_am/Aulas/Aula5VC.ipynb
@@ -386,7 +386,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "790c738a-e5b7-4275-b9f3-bb6d25e64bb5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1949,7 +1951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
